# baby-llm

./: .readthedocs.yaml  AGENTS.md
NeuralChild/: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  GPU_SETUP.md  LICENSE  NEXT_STEPS.md  README.md  TEST_SUITE_SUMMARY.md  VERIFY_TESTS.sh  config.yaml  install_gpu_pytorch.sh  pyproject.toml  requirements.txt  run.sh  run_neuralchild.py  test_import.py  test_output.txt
NeuralChild-main/: .gitignore  CHANGELOG.md  DOCUMENTATION.md  README.md  cli.py  config.py  neural-child-dashboard.py  pyproject.toml  requirements.txt  run_dashboard.py  run_tests.py
NeuralChild-main/communication/: message_bus.py
NeuralChild-main/core/: neural_network.py  schemas.py
NeuralChild-main/mind/: language.py  mind_core.py  schemas.py
NeuralChild-main/mind/networks/: consciousness.py  emotions.py  perception.py  thoughts.py
NeuralChild-main/mother/: mother_llm.py
NeuralChild-main/tests/: conftest.py  run_tests.py  test_dashboard.py  test_mind.py  test_mother.py  test_networks.py
NeuralChild-main/utils/: llm_module.py
NeuralChild/docs/: Makefile  changelog.rst  conf.py  contributing.rst  getting_started.rst  index.rst  installation.rst  license.rst  quickstart.rst  requirements.txt
NeuralChild/docs/api/: communication.rst  config.rst  core.rst  index.rst  mind.rst  mother.rst  utils.rst
NeuralChild/docs/examples/: basic_simulation.rst  index.rst  mother_child_interaction.rst
NeuralChild/docs/user_guide/: concepts.rst  developmental_stages.rst  index.rst
NeuralChild/examples/: README.md  basic_simulation.py  mother_child_interaction.py
NeuralChild/neuralchild/: __init__.py  cli.py  config.py  dashboard.py
NeuralChild/neuralchild/communication/: __init__.py  message_bus.py
NeuralChild/neuralchild/core/: __init__.py  neural_network.py  schemas.py
NeuralChild/neuralchild/mind/: __init__.py  mind_core.py  schemas.py
NeuralChild/neuralchild/mind/networks/: __init__.py  consciousness.py  emotions.py  perception.py  thoughts.py
NeuralChild/neuralchild/mother/: __init__.py  mother_llm.py
NeuralChild/neuralchild/tests/: README.md  __init__.py  conftest.py  test_config.py  test_message_bus.py  test_mind.py  test_mother.py  test_networks.py  test_schemas.py
NeuralChild/neuralchild/utils/: __init__.py  llm_module.py
neural-child-unified/: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  COMPLETION_CERTIFICATE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_CHECKLIST.md  FINAL_SUMMARY.md  FINAL_VERIFICATION.md  GETTING_STARTED.md  INDEX.md  INSTALL.md  MODULES.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  STATUS.md  SUMMARY.md  TROUBLESHOOTING.md  deploy.ps1  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  verify_installation.py
neural-child-unified/config/: config.yaml
neural-child-unified/docs/: Makefile  README.md  api-reference.rst  architecture.rst  completion-report.md  conf.py  configuration.rst  development.rst  getting-started.md  index.rst  installation.md  make.bat  modules.md  project-complete.md  quick-start.md  requirements.txt  start-here.md  status.md  troubleshooting.md  usage.rst  web-interface.rst
neural-child-unified/docs/_static/: custom.css
neural-child-unified/docs/api/: cognitive.rst  core.rst  emotional.rst  interaction.rst  web.rst
neural-child-unified/scripts/: smoke_test_phase1.py  smoke_test_phase2.py  smoke_test_phase3.py  smoke_test_phase4.py
neural-child-unified/src/neural_child/: __init__.py  __main__.py  version.py
neural-child-unified/src/neural_child/cognitive/language/: __init__.py  symbol_grounding.py  text_embed.py
neural-child-unified/src/neural_child/cognitive/metacognition/: __init__.py  metacognition_system.py
neural-child-unified/src/neural_child/cognitive/moral/: __init__.py  moral_network.py
neural-child-unified/src/neural_child/cognitive/vision/: __init__.py  vision_development.py
neural-child-unified/src/neural_child/communication/: __init__.py  message_bus.py
neural-child-unified/src/neural_child/core/brain/: integrated_brain.py  neural_architecture.py  neural_network.py
neural-child-unified/src/neural_child/core/decision/: decision_network.py  q_learning.py
neural-child-unified/src/neural_child/core/training/: __init__.py  replay_system.py  self_supervised_trainer.py  training_system.py
neural-child-unified/src/neural_child/development/: __init__.py  curriculum_manager.py  milestone_tracker.py  stages.py
neural-child-unified/src/neural_child/dream/: __init__.py  dream_generator.py  dream_system.py
neural-child-unified/src/neural_child/emotional/: __init__.py  development.py  embedding.py  memory.py  regulation.py
neural-child-unified/src/neural_child/integration/obsidian/: __init__.py  obsidian_api.py  obsidian_connector.py  obsidian_heartbeat_logger.py  obsidian_visualizer.py
neural-child-unified/src/neural_child/interaction/: __init__.py
neural-child-unified/src/neural_child/interaction/chat/: __init__.py  emotional_chat.py  integrated_chat.py  self_awareness_chat.py
neural-child-unified/src/neural_child/interaction/llm/: __init__.py  llm_module.py  mother_llm.py  ollama_chat.py
neural-child-unified/src/neural_child/learning/: __init__.py  autonomous_learner.py
neural-child-unified/src/neural_child/models/: schemas.py
neural-child-unified/src/neural_child/physiological/: __init__.py  heartbeat_system.py
neural-child-unified/src/neural_child/psychological/: __init__.py  attachment.py  defense_mechanisms.py  theory_of_mind.py
neural-child-unified/src/neural_child/safety/: __init__.py  safety_monitor.py
neural-child-unified/src/neural_child/utils/: helpers.py  logger.py
neural-child-unified/src/neural_child/visualization/: __init__.py  visualization.py
neural-child-unified/src/neural_child/web/: __init__.py  app.py
neural-child-unified/src/neural_child/web/templates/: base.html  index.html
neural-child-unified/tests/: __init__.py  test_integration.py
(+446 files in other folders)
