[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralchild"
version = "1.0.0"
description = "A psychological brain simulation framework modeling child cognitive development using neural networks and large language models"
readme = "README.md"
authors = [
    { name = "Celaya Solutions AI Research Lab", email = "research@celayasolutions.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["artificial-intelligence", "neural-networks", "cognitive-development", "llm", "psychology", "simulation"]
dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.20.0",
    "dash>=2.9.0",
    "dash-bootstrap-components>=1.4.0",
    "plotly>=5.14.0",
    "requests>=2.25.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "networkx>=2.8.0",
    "scikit-learn>=1.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = ["neuralchild[dev,viz]"]

[project.urls]
Homepage = "https://github.com/celayasolutions/neuralchild"
Documentation = "https://neuralchild.readthedocs.io"
Repository = "https://github.com/celayasolutions/neuralchild"
Issues = "https://github.com/celayasolutions/neuralchild/issues"
Changelog = "https://github.com/celayasolutions/neuralchild/blob/main/CHANGELOG.md"

[project.scripts]
neuralchild = "neuralchild.cli:main"

[tool.setuptools]
packages = ["neuralchild", "neuralchild.core", "neuralchild.mind", "neuralchild.mind.networks", "neuralchild.mother", "neuralchild.communication", "neuralchild.visualization", "neuralchild.utils"]

[tool.setuptools.package-data]
neuralchild = ["py.typed", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["neuralchild/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=neuralchild",
    "--cov-report=html",
    "--cov-report=term-missing",
]
