#----------------------------------------------------------------------------
#File:       pyproject.toml
#Project:    Baby LLM - Unified Neural Child Development System
#Created by: Celaya Solutions, 2025
#Author:     Christopher Celaya <chris@chriscelaya.com>
#Description: Python project configuration
#Version:    1.0.0
#License:    MIT
#Last Update: January 2025
#----------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-child-unified"
version = "1.0.0"
description = "A unified neural child development system modeling child cognitive development using neural networks and Ollama LLM"
readme = "README.md"
authors = [
    { name = "Celaya Solutions", email = "chris@chriscelaya.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["artificial-intelligence", "neural-networks", "cognitive-development", "llm", "ollama", "psychology", "simulation"]
dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.20.0",
    "flask>=3.0.0",
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
    "networkx>=2.8.0",
    "scikit-learn>=1.0.0",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = ["neural-child-unified[dev,viz]"]

[project.urls]
Homepage = "https://celayasolutions.com"
Repository = "https://github.com/while-basic/baby-llm"

[project.scripts]
neural-child = "neural_child.cli:main"

[tool.setuptools]
packages = ["neural_child"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
neural_child = ["py.typed", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=neural_child",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

